truncate text fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1892,6 +1892,8 @@ border-bottom:none;
 .view-details a {
 	text-decoration: underline;
 }
-p.subdesc {font-size:12px !important;}
+p.subdesc {font-size:12px !important;
+height:60px;
+overflow:hidden;}
 #question_quest {width:90%;}
 #alternate_phrases label {font-size: 14px; clear: both;}
